[package]
name = "lua_bind_hash"
version = "1.0.1"
authors = ["jam1garner <jam1.mcleod@hotmail.com>", "jugeeya <jugeeya@live.com>"]
edition = "2018"

[[bin]]
name = "lua_bind_hash_rs"
path = "lua_bind_hash.rs"

[lib]
name = "bind_hash"
path = "lua_bind_hash.rs"
test = true

[profile.dev]
overflow-checks = false

[profile.test]
overflow-checks = false
